--- a/templates/index.html
+++ b/templates/index.html
@@ -173,9 +173,7 @@
                             <input type="password" required="" name="password" id="password" value=""
                                    placeholder="请输入密码">
                         </div>
-                        <div class="div2"><img src="/static/images/code.jpg" onclick="this.src=this.src+&#39;?&#39;"
-                                               title="看不清，换一张">
-                            <input type="text" required="" name="code" class="" value="" placeholder="验证码">
+                        <div class="div2">
                             <button type="submit" name="dosubmit" value="登 录">立即登录</button>
                         </div>
                         <div class="div3"><a href="register.html" class="btn btn-zc" role="button"
