--- a/templates/index03.html
+++ b/templates/index03.html
@@ -51,7 +51,7 @@
             <li>
                 <a href="user_list.html">我的作品</a>
             </li>
-            <li>
+            <li class="gxz">
                 <a href="index03.html">谈天说地</a>
             </li>
 
@@ -64,9 +64,21 @@
             <div class="gj-head">
                 <div class="gj-cont">
                     {% if not user.avatar_url %}
-                    <img src="/static/images/user_pic.png" alt="用户头像">
+                    <a href="/" class="author_pic"><img src="/static/images/user_pic.png" alt="author_pic"></a>
                     {% else %}
-                    <img src="{{ user.avatar_url }}" alt="用户头像">
+                    <a href="/" class="author_pic"><img src="/static/upload/{{ user.avatar_url }}" alt="author_pic"></a>
+                    {% endif %}
+                    {% if user %}
+                    <h4>{{ user.nick_name }} </h4>
+                    &emsp;&emsp;
+                    {% if user.signature %}
+                    <h4> {{ user.signature }} </h4>
+                    <!--<p>{{ user.signature }}</p>-->
+                    {% else %}
+                    <h4> 这个人很懒，什么也没留下... </h4>
+                    {% endif %}
+                    {% else %}
+                    <h4><a href="/">请先登录</a></h4>
                     {% endif %}
                 </div>
             </div>
@@ -210,7 +222,8 @@
                         {% if not user.avatar_url %}
                         <a href="#" class="author_pic"><img src="/static/images/user_pic.png" alt="author_pic"></a>
                         {% else %}
-                         <a href="#" class="author_pic"><img src="{{ user.avatar_url }}" alt="author_pic"></a>
+                        <a href="/personage" class="author_pic"><img src="/static/upload/{{ user.avatar_url }}"
+                                                                     alt="author_pic" width="120" height="120"></a>
                         {% endif %}
                         <div class="author_resume">{{ user.nick_name }}</div>
                         {% if not user.signature %}
