'完善页面显示'

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     <!--响应式导航栏-->
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
-            <a href="index.html"
+            <a href="/"
                title="Stage performers" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">Stage
                 performers</a>
         </div>
