--- a/templates/index02.html
+++ b/templates/index02.html
@@ -37,8 +37,9 @@
     <!--响应式导航栏-->
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
-            <a href="index.html"
-               title="Stage performers" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">Stage performers</a>
+            <a href="/"
+               title="Stage performers" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">Stage
+                performers</a>
         </div>
         <i class="gbar fa fa-bars" aria-hidden="true"></i>
         <ul class="gnav-ul gj-right">
@@ -65,79 +66,62 @@
                 <nav class="gj-ljdh">
                     <!--路径导航模块-->
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/index.html">首页</a>
-                    &gt; <a
-                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/index1.html"
-                        title="知识干货">知识干货</a></nav>
+                    <a href="/">首页</a> &gt; <a href="index02.html">知识干货</a></nav>
                 <div class="gj-body gul-tuw1">
-                    <div class="gtw-ul gclear">
-                        <div class="gtw-img">
-                            <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/13.html"><img
-                                    src="/static/images/180313112630855.jpg" alt="未备案网站免费使用畅言社会化评论系统的教程"></a>
-                        </div>
-                        <div class="gtw-body">
-                            <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/13.html">
-                                <h4>未备案网站免费使用畅言社会化评论系统的教程</h4>
-                            </a>
-                            <p>好端端的多说社会化评论系统的官方近期发表了声明即将关闭服务，而大名鼎鼎的搜狐畅言评论系统需要网站域名备案才能用，那么今天博主就教大...</p>
-                            <div class="gtw-sx">
-                                <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/init1.html"><i
-                                        class="fa fa-user"> Mr.郭</i></a>
-                                <i class="fa fa-clock-o"> 2018-02-27</i>
-                                <i class="fa fa-eye"> 3867</i>
+                    {% for new in paginate.items %}
+                    <div class="gj-body gul-tuw1">
+                        <div class="gtw-ul gclear">
+                            <div class="gtw-body">
+                                <a href="/detail/{{ new.id }}">
+                                    <h4>{{ new.title }}</h4>
+                                </a>
+                                <p>{{ new.digest }}</p>
+                                <div class="gtw-sx">
+                                    <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
+                                    <i class="fa fa-clock-o" aria-hidden="true"> {{ new.create_time }}</i>
+                                    <i class="fa fa-eye" aria-hidden="true"> 3867</i>
+                                    <a href="/detail/{{ new.id }}"><i
+                                            class="fa fa-folder-open" aria-hidden="true"> 知识干货</i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="gtw-ul gclear">
-                        <div class="gtw-img">
-                            <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/8.html"><img
-                                    src="/static/images/180313112951280.jpg" alt="phpStudy最新使用教程 - 让天下没有难配的php环境"></a>
-                        </div>
-                        <div class="gtw-body">
-                            <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/8.html">
-                                <h4>phpStudy最新使用教程 - 让天下没有难配的php环境</h4>
-                            </a>
-                            <p>
-                                一次性安装，无须配置即可使用，是非常方便、好用的PHP调试环境。该程序绿色小巧简易迷你仅有32M，有专门的控制面板。总之学习PHP只需一个包。对学习PHP的新手来说，WINDOWS下环境配置是一件很困难的事；...</p>
-                            <div class="gtw-sx">
-                                <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/init1.html"><i
-                                        class="fa fa-user"> Mr.郭</i></a>
-                                <i class="fa fa-clock-o"> 2018-02-01</i>
-                                <i class="fa fa-eye"> 2497</i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gtw-ul gclear">
-                        <div class="gtw-img">
-                            <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/4.html"><img
-                                    src="/static/images/180125053634150.jpg" alt="给web前端开发人员的一些建议"></a>
-                        </div>
-                        <div class="gtw-body">
-                            <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/4.html">
-                                <h4>给web前端开发人员的一些建议</h4>
-                            </a>
-                            <p>前端这一行，入门并不困难，掌握XHTML+CSS之后，基本上就可以找到一份工作。其他的东西，我们可以入职后再慢慢学习。那怎么才算掌握？掌握...</p>
-                            <div class="gtw-sx">
-                                <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/init1.html"><i
-                                        class="fa fa-user"> Mr.郭</i></a>
-                                <i class="fa fa-clock-o"> 2018-01-25</i>
-                                <i class="fa fa-eye"> 1458</i>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
+                    <div id="paginations" class="pageinfo"></div>
+                    <script>
+                        $(function () {
+                            $("#paginations").pagination({
+                                currentPage: {
+                            {
+                                paginate.page
+                            }
+                        },
+                            totalPage: {
+                                {
+                                    paginate.pages
+                                }
+                            }
+                        ,
+                            callback: function (current) {
+                                window.location.href = "/?page=" + current;
+                            }
+                        })
+                            ;
+                        });
+                    </script>
                 </div>
                 <!--gul-tuw1-结束-->
-                <nav class="gj-page"><span class="pageinfo">共<strong>1</strong>页<strong>3</strong>条记录</span><a
-                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
-                        class="homepage">首页</a><a
-                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
-                        class="nopage">上页</a><a
-                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
-                        class="listpage curpage">1</a><a
-                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
-                        class="nopage">下页</a><a
-                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
-                        class="endpage">尾页</a></nav>
+                <!--                <nav class="gj-page"><span class="pageinfo">共<strong>1</strong>页<strong>3</strong>条记录</span><a-->
+                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
+                <!--                        class="homepage">首页</a><a-->
+                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
+                <!--                        class="nopage">上页</a><a-->
+                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
+                <!--                        class="listpage curpage">1</a><a-->
+                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
+                <!--                        class="nopage">下页</a><a-->
+                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
+                <!--                        class="endpage">尾页</a></nav>-->
                 <!--nav-结束-->
             </div>
 
@@ -200,11 +184,10 @@
                         <div class="div1"><i class="fa fa-user" aria-hidden="true"></i>
                             <input type="text" required="" name="username" id="username" value="" placeholder="请输入用户名">
                             <i class="fa fa-lock" aria-hidden="true"></i>
-                            <input type="password" required="" name="password" id="password" value="" placeholder="请输入密码">
+                            <input type="password" required="" name="password" id="password" value=""
+                                   placeholder="请输入密码">
                         </div>
-                        <div class="div2"><img src="/static/images/code.jpg" onclick="this.src=this.src+&#39;?&#39;"
-                                               title="看不清，换一张">
-                            <input type="text" required="" name="code" class="" value="" placeholder="验证码">
+                        <div class="div2">
                             <button type="submit" name="dosubmit" value="登 录">立即登录</button>
                         </div>
                         <div class="div3"><a href="register.html" class="btn btn-zc" role="button"
