--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -37,7 +37,7 @@
     <!--响应式导航栏-->
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
-            <a href="index.html"
+            <a href="/"
                title="Stage performers" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">Stage performers</a>
         </div>
         <i class="gbar fa fa-bars" aria-hidden="true"></i>
@@ -145,9 +145,7 @@
                             <i class="fa fa-lock" aria-hidden="true"></i>
                             <input type="password" required="" name="password" id="password" value="" placeholder="请输入密码">
                         </div>
-                        <div class="div2"><img src="/static/images/code.jpg" onclick="this.src=this.src+&#39;?&#39;"
-                                               title="看不清，换一张">
-                            <input type="text" required="" name="code" class="" value="" placeholder="验证码">
+                        <div class="div2">
                             <button type="submit" name="dosubmit" value="登 录">立即登录</button>
                         </div>
                         <div class="div3"><a href="register.html" class="btn btn-zc" role="button"
