--- a/templates/index02.html
+++ b/templates/index02.html
@@ -87,42 +87,19 @@
                         </div>
                     </div>
                     {% endfor %}
-                    <div id="paginations" class="pageinfo"></div>
-                    <script>
-                        $(function () {
-                            $("#paginations").pagination({
-                                currentPage: {
-                            {
-                                paginate.page
-                            }
-                        },
-                            totalPage: {
-                                {
-                                    paginate.pages
-                                }
-                            }
-                        ,
-                            callback: function (current) {
-                                window.location.href = "/?page=" + current;
-                            }
-                        })
-                            ;
-                        });
-                    </script>
-                </div>
-                <!--gul-tuw1-结束-->
-                <!--                <nav class="gj-page"><span class="pageinfo">共<strong>1</strong>页<strong>3</strong>条记录</span><a-->
-                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
-                <!--                        class="homepage">首页</a><a-->
-                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
-                <!--                        class="nopage">上页</a><a-->
-                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
-                <!--                        class="listpage curpage">1</a><a-->
-                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
-                <!--                        class="nopage">下页</a><a-->
-                <!--                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"-->
-                <!--                        class="endpage">尾页</a></nav>-->
-                <!--nav-结束-->
+                gul-tuw1-结束
+                                <nav class="gj-page"><span class="pageinfo">共<strong>1</strong>页<strong>5</strong>条记录</span><a
+                                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
+                                        class="homepage">首页</a><a
+                                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
+                                        class="nopage">上页</a><a
+                                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
+                                        class="listpage curpage">1</a><a
+                                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
+                                        class="nopage">下页</a><a
+                                        href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/list_1.html"
+                                        class="endpage">尾页</a></nav>
+                nav-结束
             </div>
 
             <div class="gj-gg"><a href="javascript:;" target="_blank" title="建站就选YzmCMS！"><img
